Added favicon support and web app manifest

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Intelliwatt | Powered by Intellipath Solutions</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="my_favicon/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="my_favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="my_favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="my_favicon/favicon-96x96.png">
+  
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="my_favicon/site.webmanifest">
+  <meta name="theme-color" content="#0b0c2f">
+  <meta name="application-name" content="Intelliwatt">
+  <meta name="apple-mobile-web-app-title" content="Intelliwatt">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  
   <style>
     body {
       background-color: #0b0c2f;
@@ -43,7 +57,7 @@
 
   <main>
     <p>
-      We’re building the most advanced home energy intelligence platform ever offered to everyday people — and we’re giving it away for free.
+      We're building the most advanced home energy intelligence platform ever offered to everyday people — and we're giving it away for free.
     </p>
     <p>
       Intelliwatt is designed to help you truly understand how your home uses energy — and how to make smarter, cheaper, cleaner choices every single day. No tricks. No pressure. Just powerful tools made for real households.
