Updated branding: Intelliwatt -> IntelliWatt

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Intelliwatt | Powered by Intellipath Solutions</title>
+  <title>IntelliWatt | Powered by Intellipath Solutions</title>
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="my_favicon/favicon.ico">
@@ -14,8 +14,8 @@
   <!-- Web App Manifest -->
   <link rel="manifest" href="my_favicon/site.webmanifest">
   <meta name="theme-color" content="#0b0c2f">
-  <meta name="application-name" content="Intelliwatt">
-  <meta name="apple-mobile-web-app-title" content="Intelliwatt">
+  <meta name="application-name" content="IntelliWatt">
+  <meta name="apple-mobile-web-app-title" content="IntelliWatt">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
@@ -51,7 +51,7 @@
 </head>
 <body>
   <header>
-    <h1>Intelliwatt</h1>
+    <h1>IntelliWatt</h1>
     <p>Smarter Energy. Freely Delivered.</p>
   </header>
 
@@ -60,7 +60,7 @@
       We're building the most advanced home energy intelligence platform ever offered to everyday people — and we're giving it away for free.
     </p>
     <p>
-      Intelliwatt is designed to help you truly understand how your home uses energy — and how to make smarter, cheaper, cleaner choices every single day. No tricks. No pressure. Just powerful tools made for real households.
+      IntelliWatt is designed to help you truly understand how your home uses energy — and how to make smarter, cheaper, cleaner choices every single day. No tricks. No pressure. Just powerful tools made for real households.
     </p>
     <p>
       Our mission is bold: to shift the power back to consumers and help millions save money through clarity, data, and intelligent energy automation.
