--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     header {
       margin-top: 3rem;
     }
-    h1 {
-      font-size: 2.7rem;
-      color: #00ffff;
-      text-shadow: 0 0 10px #00ffff;
+    .logo {
+      max-width: 300px;
+      height: auto;
+      margin-bottom: 1rem;
+      filter: drop-shadow(0 0 10px #00ffff);
     }
     p {
       font-size: 1.15rem;
@@ -51,7 +52,7 @@
 </head>
 <body>
   <header>
-    <h1>IntelliWatt</h1>
+    <img src="Intelliwatt Logo.png" alt="IntelliWatt" class="logo">
     <p>Smarter Energy. Freely Delivered.</p>
   </header>
 
