--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
       text-align: center;
     }
     header {
-      margin-top: 3rem;
+      margin-top: 4rem;
+      padding-top: 1rem;
     }
     .logo {
       max-width: 300px;
       height: auto;
       margin-bottom: 1rem;
       filter: drop-shadow(0 0 10px #00ffff);
+      padding: 1rem;
     }
     p {
       font-size: 1.15rem;
