Updated footer styling with neon blue glow for IntelliWatt and blue Intellipath Solutions link

--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
       font-size: 0.9rem;
       color: #88b0c8;
     }
+    .footer-brand {
+      color: #00ffff;
+      text-shadow: 0 0 10px #00ffff;
+      font-weight: bold;
+    }
+    .company-link {
+      color: #0005FF;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .company-link:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -77,7 +90,9 @@
   </main>
 
   <footer>
-    &copy; 2025 Intellipath Solutions LLC. All rights reserved.
+    <p><span class="footer-brand">IntelliWatt™</span><br>
+    An <a href="https://www.intellipath-solutions.com" class="company-link">Intellipath Solutions</a> Company</p>
+    <p style="margin-top: 1rem;">&copy; 2025 Intellipath Solutions LLC. All rights reserved.</p>
   </footer>
 </body>
 </html>
