Fix image filename case sensitivity

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
   <header>
-    <img src="Intelliwatt Logo TM.png" alt="IntelliWatt™" class="logo">
+    <img src="IntelliWatt Logo TM.png" alt="IntelliWatt™" class="logo">
     <p>Smarter Energy. Freely Delivered.</p>
   </header>
 
