Added neon blue styling to IntelliWatt in main content

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       We're building the most advanced home energy intelligence platform ever offered to everyday people — and we're giving it away for free.
     </p>
     <p>
-      IntelliWatt™ is designed to help you truly understand how your home uses energy — and how to make smarter, cheaper, cleaner choices every single day. No tricks. No pressure. Just powerful tools made for real households.
+      <span style="color: #00ffff; text-shadow: 0 0 10px #00ffff; font-weight: bold;">IntelliWatt™</span> is designed to help you truly understand how your home uses energy — and how to make smarter, cheaper, cleaner choices every single day. No tricks. No pressure. Just powerful tools made for real households.
     </p>
     <p>
       Our mission is bold: to shift the power back to consumers and help millions save money through clarity, data, and intelligent energy automation.
