Fix Google address init and update privacy contact email

--- a/HITTHEJACKWATT/HitTheJackWatt_Privacy_Policy.html
+++ b/HITTHEJACKWATT/HitTheJackWatt_Privacy_Policy.html
@@ -586,7 +586,7 @@
             <p><a href="https://www.intelli-watt.com" class="neon-blue-text">IntelliWatt™</a> retains your data only as long as needed to operate the program and maintain compliance with applicable regulations.</p>
 
             <h2>5. Your Choices</h2>
-            <p>You may request to opt out of communications, delete your account, or update your information at any time by contacting us at <a href="mailto:privacy@intelli-watt.com">privacy@intelli-watt.com</a>.</p>
+            <p>You may request to opt out of communications, delete your account, or update your information at any time by contacting us at <a href="mailto:privacy@intelliwatt.com">privacy@intelliwatt.com</a>.</p>
 
             <h2>6. Security</h2>
             <p><a href="https://www.intelli-watt.com" class="neon-blue-text">IntelliWatt™</a> uses reasonable administrative and technical safeguards to protect your data against unauthorized access or disclosure.</p>
@@ -595,7 +595,7 @@
             <p><a href="https://www.intelli-watt.com" class="neon-blue-text">IntelliWatt™</a> may update this Privacy Policy periodically. Continued use of the site after changes are posted constitutes acceptance of the revised policy.</p>
 
             <h2>8. Contact Us</h2>
-            <p>If you have questions or concerns about this Privacy Policy, please contact us at <a href="mailto:privacy@intelli-watt.com">privacy@intelli-watt.com</a>.</p>
+            <p>If you have questions or concerns about this Privacy Policy, please contact us at <a href="mailto:privacy@intelliwatt.com">privacy@intelliwatt.com</a>.</p>
             
             <p style="color: white; font-weight: normal;"><a href="https://www.intelli-watt.com" class="neon-blue-text">IntelliWatt™</a> is a registered DBA of <a href="https://www.intellipath-solutions.com">Intellipath Solutions LLC</a>.</p>
         </div>
