Refresh dashboard card copy and benefits hero

--- a/HITTHEJACKWATT/HitTheJackWatt_Benefits.html
+++ b/HITTHEJACKWATT/HitTheJackWatt_Benefits.html
@@ -634,8 +634,8 @@
 
     <div class="container">
         <div class="benefits-container">
-            <h1 class="page-title">Why Join HitTheJackWatt™?</h1>
-            <p class="intro-text">HitTheJackWatt™ is built to reward smart energy decisions — no pressure, no sales, just savings and prizes.</p>
+            <h1 class="page-title">Why Join IntelliWatt™?</h1>
+            <p class="intro-text">IntelliWatt™ rewards smart energy decisions — no pressure, no sales, just savings and prizes that grow with the community.</p>
             
             <ul class="benefits-list">
                 <li>
